--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,32 +16,66 @@
     "e2e:test": "detox test --configuration ios.sim.debug"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
     "@life/tokens": "workspace:*",
     "@life/ui": "workspace:*",
     "@react-navigation/bottom-tabs": "^7.0.9",
     "@react-navigation/native": "^7.0.9",
     "@react-navigation/stack": "^7.0.9",
+    "@tamagui/accordion": "^1.114.5",
+    "@tamagui/adapt": "^1.114.5",
+    "@tamagui/alert-dialog": "^1.114.5",
+    "@tamagui/animate-presence": "^1.114.5",
+    "@tamagui/avatar": "^1.114.5",
+    "@tamagui/card": "^1.114.5",
+    "@tamagui/checkbox": "^1.114.5",
+    "@tamagui/collapsible": "^1.114.5",
     "@tamagui/config": "^1.114.5",
     "@tamagui/core": "^1.114.5",
+    "@tamagui/dialog": "^1.114.5",
+    "@tamagui/form": "^1.114.5",
+    "@tamagui/image": "^1.114.5",
+    "@tamagui/label": "^1.114.5",
+    "@tamagui/linear-gradient": "^1.114.5",
+    "@tamagui/list-item": "^1.114.5",
     "@tamagui/lucide-icons": "^1.114.5",
+    "@tamagui/popover": "^1.114.5",
+    "@tamagui/popper": "^1.114.5",
+    "@tamagui/portal": "^1.114.5",
+    "@tamagui/progress": "^1.114.5",
+    "@tamagui/radio-group": "^1.114.5",
+    "@tamagui/scroll-view": "^1.114.5",
+    "@tamagui/select": "^1.114.5",
+    "@tamagui/separator": "^1.114.5",
+    "@tamagui/sheet": "^1.114.5",
+    "@tamagui/slider": "^1.114.5",
+    "@tamagui/switch": "^1.114.5",
+    "@tamagui/tabs": "^1.114.5",
+    "@tamagui/text": "^1.114.5",
     "@tamagui/themes": "^1.114.5",
+    "@tamagui/toggle-group": "^1.114.5",
+    "@tamagui/tooltip": "^1.114.5",
+    "@tamagui/visually-hidden": "^1.114.5",
     "@tanstack/react-query": "^5.62.17",
     "axios": "^1.7.9",
-    "expo": "^51.0.0",
-    "expo-auth-session": "~5.5.2",
-    "expo-crypto": "~13.0.2",
-    "expo-image-picker": "~15.0.7",
-    "expo-notifications": "~0.28.19",
-    "expo-secure-store": "~13.0.2",
-    "expo-web-browser": "~13.0.3",
-    "react": "^18.3.1",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.18.1",
+    "expo": "^54.0.21",
+    "expo-auth-session": "~7.0.8",
+    "expo-modules-core": "~3.0.23",
+    "expo-crypto": "~15.0.7",
+    "invariant": "^2.2.4",
+    "expo-image-picker": "~17.0.8",
+    "expo-notifications": "~0.32.12",
+    "expo-secure-store": "~15.0.7",
+    "expo-web-browser": "~15.0.8",
+    "react": "^19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-mmkv": "^3.1.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0",
-    "react-native-svg": "^15.8.0",
+    "react-native-reanimated": "~4.1.3",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.12.1",
+    "semver": "^7.6.3",
     "tamagui": "^1.114.5",
     "zustand": "^5.0.0"
   },
@@ -51,13 +85,13 @@
     "@tamagui/babel-plugin": "^1.135.4",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.18",
+    "@types/react": "~19.1.10",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "detox": "^20.30.5",
     "eslint": "^9.9.0",
     "jest": "^29.7.0",
-    "jest-expo": "^51.0.2",
+    "jest-expo": "~54.0.13",
     "prettier": "^3.3.3",
     "react-test-renderer": "^18.3.1",
     "typescript": "^5.7.3"
