--- a/infra/docker/compose.yml
+++ b/infra/docker/compose.yml
@@ -1,37 +1,42 @@
 services:
   api:
+    container_name: lifedigital-api
     build: ../../services/api
     env_file: ../../.env
-    ports: ["8080:8080"]
+    ports: ["8180:8080"]
     depends_on: [postgres, redis, minio, clamav]
     networks: [lifenet]
 
   postgres:
+    container_name: lifedigital-postgres
     image: postgres:18
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-lifedigital}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-lifedigital}
       POSTGRES_DB: ${POSTGRES_DB:-lifedigital}
-    ports: ["5432:5432"]
+    ports: ["5532:5432"]
     volumes: [pgdata:/var/lib/postgresql]
     networks: [lifenet]
 
   redis:
+    container_name: lifedigital-redis
     image: redis:7
-    ports: ["6379:6379"]
+    ports: ["6479:6379"]
     networks: [lifenet]
 
   minio:
+    container_name: lifedigital-minio
     image: minio/minio:latest
     command: server /data --console-address ":9001"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:-lifedigital}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-lifedigital}
-    ports: ["9000:9000", "9001:9001"]
+    ports: ["9100:9000", "9101:9001"]
     volumes: [minio:/data]
     networks: [lifenet]
 
   clamav:
+    container_name: lifedigital-clamav
     image: clamav/clamav:latest
     networks: [lifenet]
 
