--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lifedigital",
   "private": true,
-  "packageManager": "pnpm@9",
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
@@ -15,6 +15,10 @@
     "turbo": "^2.0.0",
     "prettier": "^3.3.3",
     "eslint": "^9.9.0",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "@eslint/js": "^9.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "globals": "^15.9.0"
   }
 }
